fix: update baseurl for GitHub Pages subdirectory deployment

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Peter Salvato
 description: Principal Systems Architect | Operationalizing Intuition
-url: "https://petersalvato.com"
-baseurl: ""
+url: "https://petersalvato.github.io/petersalvato-constellation"
+baseurl: "/petersalvato-constellation"
 
 # Build settings
 markdown: kramdown
